# pylinkandtrack

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: check.yaml  check.yml  published.yaml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/api/: linkandtrack.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md  recursos.md  todos.md
linkandtrack/: __init__.py  linkandtrack.py
linkandtrack/client_exceptions/: __init__.py  client_error.py
linketrack/: __init__.py  linketrack.py
tests/: test_linketrack.py
